# Metadata-to-Morphsource-compare

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BATCH_TESTING.md  CHANGELOG.md  CHATGPT_QUERY_FORMATTER_SUMMARY.md  CONTRIBUTING.md  CONVERSATION_CONTINUATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  LICENSE  Makefile  PRODUCTION_IMPROVEMENTS.md  PR_SUMMARY.md  README.md  SECURITY.md  SOLUTION_SUMMARY.md  TESTING.md  TESTING_THE_FIX.md  WORKFLOW_SKIP_FIX.md  compare.py  find_me_fossils.csv  formatted_query.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_comparison.py  setup.py  show_me_scans.csv  tell_me_how_many_scans.csv  test_queries.csv  verify_pixel_spacing.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: _helpers.py  chat_handler.py  chatgpt_processor.py  citation_extractor.py  com.autoresearchclaw.dashboard.plist  dashboard.py  grade_response.py  knowledge_graph.py  literature_search.py  morphosource_api.py  morphosource_api_download.py  ontology_search.py  program.md  query_formatter.py  research_agent.py  research_report.json  research_report.md  slicer_layer2.py  slicer_layer3.py  slicer_tool.py
.github/workflows/: autoresearchclaw.yml  batch-query-processor.yml  chat-api.yml  code-quality.yml  deploy-pages.yml  issue-comment-reply.yml  issue-query-trigger.yml  morphosource_compare_verify.yml  parse_morphosource.yml  query-processor.yml  response-grader.yml  tests.yml
Tests/: confirmed_matches.csv  match_log_20250302_125810.txt  matched.csv
data/csv/: UF Lepidosaura All CT Scan List Compare.csv
data/morphosource-download-000769445/morphosource_media-id-000769445_download-24f73f1b/: media-manifest-2b5a8576-2055-4d8a-8216-a66ec09b8483.csv  media-manifest-f3d587a7-1295-42de-8bb3-04a1c3915915.xlsx
docs/: ABOUT.md  ARCHITECTURE.md  INTERFACE.md  MULTI_RESPONSE_GRADING.md  QUERY_SUBMISSION_GUIDE.md  QUERY_SYSTEM_GUIDE.md  QUICK_START.md  README.md  TESTING.md  TROUBLESHOOTING.md  _config.yml  index.html
docs/archive/: BATCH_PROCESSOR_FIX.md  BEFORE_AND_AFTER.md  BEFORE_AND_AFTER_FLOW.md  DEPLOYMENT_GUIDE.md  FIX_SUMMARY.md  HOW_TO_PROCESS_ISSUE_13.md  PR_SUMMARY.md  REFACTORING_SUMMARY.md  WORKFLOW_COMPARISON.md  deep-research-report.md
metadata_to_morphsource/: __init__.py  router.py  summarize.py  url_builder.py
morpho/: __init__.py  __main__.py  cli.py  client.py  router.py  schemas.py  summarize.py  taxon_map.py  url_builder.py
tests/: __init__.py  test_autoresearchclaw.py  test_compare.py  test_integration_multi_response.py  test_issue_comment_reply.py  test_query_processor_scripts.py  test_research_agent.py  test_response_grader.py  test_router.py  test_run_comparison.py  test_summarize.py  test_url_builder.py  test_verify_pixel_spacing.py  test_workflow_structure.py
